ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ui-ingress
  namespace: retail-app
  annotations:
    kubernetes.io/ingress.class: alb          # or alb if using older
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # for pods directly
   #alb.ingress.kubernetes.io/certificate-arn: ""  # add ACM ARN for HTTPS (bonus)
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/ssl-redirect: "443"  # optional redirect HTTP→HTTPS
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-store-ui  # confirm exact service name with kubectl get svc -n retail-app
            port:
              number: 80
